# lean-ai-serve

./: .gitignore  README.md  config.example.yaml  pyproject.toml
dashboards/: lean-ai-serve.json
docs/: api-reference.md  architecture.md  authentication.md  cli-reference.md  configuration.md  contributing.md  deploy-aws.md  deploy-azure.md  deploy-gcp.md  deployment.md  getting-started.md  model-management.md  observability.md  security-and-compliance.md  training-guide.md
docs/internal/: phase-4-model-lifecycle.md  phase-5-observability-oidc.md  phase-6-polish-vault-compression.md
src/lean_ai_serve/: __init__.py  config.py  db.py  main.py
src/lean_ai_serve/api/: audit_routes.py  auth_routes.py  health.py  keys.py  metrics.py  models.py  openai_compat.py  training.py  usage.py
src/lean_ai_serve/cli/: admin.py  audit.py  config_cmd.py  db_cmd.py  keys.py  main.py  training.py
src/lean_ai_serve/dashboard/: __init__.py  api_views.py  dependencies.py  routes.py
src/lean_ai_serve/dashboard/static/css/: dashboard.css
src/lean_ai_serve/dashboard/static/js/: dashboard.js
src/lean_ai_serve/dashboard/templates/: base.html  home.html  login.html  models.html  monitoring.html  security.html  settings.html  training.html
src/lean_ai_serve/dashboard/templates/models/: _card.html  _list.html  _pull_modal.html
src/lean_ai_serve/dashboard/templates/monitoring/: _alerts.html  _charts.html
src/lean_ai_serve/dashboard/templates/partials/: _confirm_modal.html  _navbar.html  _pagination.html  _sidebar.html  _toast.html
src/lean_ai_serve/dashboard/templates/security/: _audit_table.html  _keys_table.html
src/lean_ai_serve/dashboard/templates/training/: _adapters.html  _datasets.html  _job_card.html  _submit_form.html
src/lean_ai_serve/engine/: lifecycle.py  process.py  proxy.py  router.py  validators.py
src/lean_ai_serve/middleware/: compression.py
src/lean_ai_serve/models/: downloader.py  registry.py  schemas.py
src/lean_ai_serve/observability/: alerts.py  logging.py  metrics.py  middleware.py  tasks.py  tracing.py
src/lean_ai_serve/security/: audit.py  auth.py  content_filter.py  encryption.py  ldap_auth.py  oidc.py  rate_limiter.py  rbac.py  secrets.py  usage.py  vault.py
src/lean_ai_serve/training/: adapters.py  backend.py  datasets.py  orchestrator.py  schemas.py
src/lean_ai_serve/utils/: gpu.py
tests/: conftest.py  test_adapters.py  test_admin_cli.py  test_alerts.py  test_audit.py  test_auth.py  test_auth_routes.py  test_background_tasks.py  test_compression.py  test_config.py  test_config_env.py  test_content_filter.py  test_dashboard_api_views.py  test_dashboard_auth.py  test_dashboard_routes.py  test_datasets.py  test_db.py  test_encryption.py  test_ldap.py  test_lifecycle.py  test_metrics.py  test_metrics_middleware.py  test_oidc.py  test_oidc_api.py  test_orchestrator.py  test_process_enhanced.py  test_rate_limiter.py  test_rbac.py  test_registry.py  test_secrets.py  test_tracing.py  test_training_api.py  test_training_backend.py  test_usage.py  test_validators.py  test_vault.py
